# global-it-monitor

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  README.md  pyproject.toml  requirements.txt
.opencode/plans/: fix-config-loader.md
config/: hosts.yaml
docs/ADR/: alert-engine-ADR.md  monitoring-loop-ADR.md
docs/PRD/: alert-engine-PRD.md  monitoring-loop-PRD.md
src/: main.py  monitor.py  scheduler.py
src/config/: loader.py
src/probes/: icmp.py  tcp.py
src/storage/: database.py
tests/: test_alert_engine.py  test_config_loader.py  test_database.py  test_icmp.py  test_main.py  test_monitor.py  test_scheduler.py  test_tcp.py
